style: fix footer position, order summary position
edit App and Home css modules to make footer
appear at the bottom of the pages whether they
have content or not.

modify Cart css module to have the order summary
column snap to the bottom of the page if the
window becomes too narrow.

modify Stepper css module to shrink the input
field width and center its text.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  min-height: 100vh;
+  width: 100%;
 }
 
 .app header {
@@ -20,6 +22,7 @@
 
 .app main {
   display: flex;
+  flex: 1;
   flex-direction: column;
   justify-content: center;
   align-items: center;
