--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -3,4 +3,5 @@
   justify-content: center;
   align-items: center;
   min-height: 100%;
+  width: 100%;
 }
